--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ARTICULO DERECHO</title>
+    <title>REVISTA DOXA</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -687,5 +687,6 @@
     <script type="text/javascript" src="js/contact_me.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
+
 
 </html>
