--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-4 team">
                         <div>
-                            <div class="team-img"><img src="img/dra.jpg" alt="..." style="border-radius:150px;"></div>
+                            <!--<div class="team-img"><img src="img/dra.jpg" alt="..." style="border-radius:150px;"></div>-->
                             <div class="caption">
-                                <h3>Director(a):</h3>
-                                <p>Dra. E. Natalia Miranda Parra </p>
+                                <!--<h3>Director(a):</h3>
+                                <p>Dra. E. Natalia Miranda Parra </p>-->
                                 <h3>Consejo academico:</h3>
                                 <p>Univ. Maribel Choque Gutierrez <br>
                                     Univ. Luis Pablo Quiroga Mendoza <br>
@@ -116,7 +116,7 @@
                     <div class="col-md-4">
                         <div class="">
                             <div>
-                                <a target="_blank_" href="REVISTA_ESTUDIANTIL.pdf"><img src="img/pdf.png" heigth="100" width="100"
+                                <a target="_blank_" href="REVISTA_ESTUDIANTIL2.pdf"><img src="img/pdf.png" heigth="100" width="100"
                                         target="_blank">
                             </div>
                             <div class="caption">
@@ -125,7 +125,7 @@
                                 <h5>O escanea el QR</h5>
                             </div>
                             <div>
-                                <img src="img/QR.png" heigth="100" width="100"
+                                <img src="img/QR2.jpg" heigth="100" width="100"
                                         target="_blank">
                             </div>
                         </div>
@@ -187,9 +187,7 @@
                 <div class="col-xs-12 col-md-6 ">
                     <!-- <div class="about-img"><img src="img/derecho.jpg" class="img-responsive" alt=""></div> -->
                     <div class="about-text">
-                        <h2>“CONSTITUCIÓN POLÍTICA DEL ESTADO
-                            ARTÍCULO 168, REELECCIÓN PRESIDENCIAL Y
-                            REFORMA CONSTITUCIONAL</h2>
+                        <h2>“ALCANCES DE LA INCONSTITUCIONALIDAD POR OMISIÓN”</h2>
                         <h3><b>Autor(a):&nbsp;</b>UNIV. AMANDA MURIEL ADUVIRI </h3>
                         <p>En América Latina, a pesar de la abolición de la
                             esclavitud en Brasil (1888) y la garantía de igualdad en
@@ -690,6 +688,7 @@
 
 
 </html>
+
 
 
 
