--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
                                 <!--<h3>Director(a):</h3>
                                 <p>Dra. E. Natalia Miranda Parra </p>-->
                                 <h3>Consejo academico:</h3>
-                                <p>Univ. Maribel Choque Gutierrez <br>
+                                <p>Univ. Helen Alejandra Quispe Mita<br>
                                     Univ. Luis Pablo Quiroga Mendoza <br>
-                                    Univ. Helen Alejandra Quispe Mita
+                                    
+                                    Univ. Maribel Choque Gutierrez <br>
+                                    Univ. Mayron Gregory Ramírez Velásquez
                                 </p>
 
                             </div>
@@ -688,6 +690,7 @@
 
 
 </html>
+
 
 
 
